[workspace]
members = ["logic"]
exclude = ["asset-repo"]

[package]
name = "plenty-of-fish-in-the-sea"
version = "0.0.1"
edition = "2021"
description = "Our Game-Off 2022 game jam participation"

[dependencies]
good-web-game = "0.6.0"
logic = {path = "logic"}
rand = { version = "0.8.5", default_features = false }
num-rational = {version = "0.4"}
mint = "0.5.9"
asset-config = { path = "asset-repo/libs/asset-config" }
toml = "0.5"
miniquad = "=0.3.13"

[dependencies.nalgebra]
version = "0.31.0"
features = [ "mint" ]


[build-dependencies]
tar = "0.4"
built = { version = "0.5", features = ["git2", "chrono"] }


[profile.release]
strip = true
lto = true
panic = 'abort'
codegen-units = 1
opt-level = 'z'
