[workspace]
members = ["logic"]
exclude = ["asset-repo"]

[package]
name = "plenty-of-fish-in-the-sea"
version = "0.0.2-alpha"
edition = "2021"
description = "Our Game-Off 2022 game jam participation"


[features]
# Enable development stuff
dev = ["logic/dev"]


[dependencies]
good-web-game = "0.6.0"
logic = {path = "logic"}
rand = { version = "0.8.5", default_features = false }
num-rational = {version = "0.4"}
mint = "0.5.9"
asset-config = { path = "asset-repo/libs/asset-config" }
toml = "0.5"
cfg-if = "1.0"
structopt = "0.3.26"
lazy_static = "1.4"
wyhash = "0.5.0"
enum-map = "2.3"

# Pin Miniquad, because the newer 0.3.14 is broken!
miniquad = "=0.3.13"

[dependencies.nalgebra]
version = "0.31.0"
features = [ "mint" ]


[target.'cfg(any(target_family="unix", target_family="windows"))'.dependencies]
# None yet


[target.'cfg(target_family="wasm")'.dependencies]
# None yet, notice we can't have anything with wasm-bindgen, because of miniquad


[build-dependencies]
tar = "0.4"
built = { version = "0.5", features = ["git2", "chrono"] }


[profile.dev]
#opt-level = 1

[profile.dev.package."*"]
opt-level = 1

[profile.release]
strip = true
lto = true
panic = 'abort'
codegen-units = 1
opt-level = 'z'



[patch.crates-io]
miniquad = { git = "https://github.com/CoffeJunkStudio/miniquad", branch = "hack-fixed-filter-setting-and-mipmap" }
