[workspace]
members = ["logic", "game-gwg"]
exclude = ["asset-repo"]


[profile.dev]
#opt-level = 1

[profile.dev.package."*"]
opt-level = 1

[profile.release]
strip = true
lto = true
panic = 'abort'
codegen-units = 1
opt-level = 3



[patch.crates-io]
miniquad = { git = "https://github.com/CoffeJunkStudio/miniquad", branch = "hack-fixed-filter-setting-and-mipmap" }
good-web-game = { git = "https://github.com/CoffeJunkStudio/good-web-game.git", branch = "plenty-of-fish" }

