[package]
name = "logic"
version = "0.0.2"
edition = "2021"


[features]
# Enables development stuff
dev = []


[dependencies]
rand = { version = "0.8.5", default_features = false }
rand_pcg = "0.3.1"
rand_distr = { version = "0.4.3", default-features = false }
structopt = "0.3.26"
lazy_static = "1.4"
noise = "0.7.0"
standard-dist = "1.0"
nalgebra = "0.31.3"

uuid = "1.1"
enum-map = "2.3"

[dependencies.nalgebra-glm]
version = "0.17.0"
features = [ "serde-serialize" ]

[dependencies.serde]
version = "1.0.137"
features = [ "derive" ]

[dependencies.strum]
version = "0.24.0"
features = [ "derive" ]

